# snow-discovery-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agent-forge/: project.json
.agent-forge/plans/: backlog.json  progress-log.json  project-brief.md  roadmap.json
.agent-forge/reports/: SESSION-SUMMARY.md  auto-session-20260218-autonomous.md  auto-session-final.md  orchestration-manifest.md
.agent-forge/state/: build-output.json  context-metrics.jsonl  pipeline.json  plan-output.json
.agent-forge/tests/: test-cases.json
.claude/: mcp-config-examples.md  settings.json
.github/workflows/: ci.yml
src/snow_discovery_agent/: __init__.py  client.py  config.py  exceptions.py  models.py  server.py
src/snow_discovery_agent/tools/: __init__.py  analysis.py  compare.py  credentials.py  errors.py  health.py  patterns.py  ranges.py  remediation.py  schedule.py  schedules_list.py  status.py  utils.py
tests/: conftest.py  test_client.py  test_config.py  test_exceptions.py  test_models.py  test_package.py  test_server.py  test_tools_analysis.py  test_tools_compare.py  test_tools_credentials.py  test_tools_errors.py  test_tools_health.py  test_tools_patterns.py  test_tools_ranges.py  test_tools_remediation.py  test_tools_schedule.py  test_tools_schedules_list.py  test_tools_status.py  test_tools_utils.py
tests/integration/: test_integration.py
tests/semantic/: dependency_map.json
tests/semantic/prompts/: server_support.yaml  service_management.yaml
