[project]
name = "snow-discovery-agent"
version = "0.1.0"
description = "MCP server for ServiceNow Discovery operations -- schedule scans, analyze results, remediate failures, manage discovery patterns and credentials"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "amragl"},
]
keywords = ["servicenow", "discovery", "mcp", "itom", "network-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[project.scripts]
snow-discovery-agent = "snow_discovery_agent.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-m", "not integration",
    "--ignore=tests/integration",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring a live ServiceNow instance",
]

# ---------------------------------------------------------------------------
# coverage configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["snow_discovery_agent"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

# ---------------------------------------------------------------------------
# ruff configuration
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B010",   # do not call setattr with a constant attribute value
    "SIM108", # use ternary operator (can reduce readability)
    "RUF012", # mutable class variables (false positives with class-level config dicts)
    "UP007",  # use X | Y for union types (keep Optional for clarity)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802",   # function name should be lowercase (test names can be descriptive)
    "N803",   # argument name should be lowercase
    "B011",   # do not assert false
    "SIM300", # yoda conditions acceptable in tests
    "TCH001", # test files use imports at runtime for fixtures/assertions
    "TCH002", # test files use imports at runtime for fixtures/assertions
]

[tool.ruff.lint.isort]
known-first-party = ["snow_discovery_agent"]

# ---------------------------------------------------------------------------
# mypy configuration
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
exclude = [
    "venv/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = false
warn_unreachable = true
disallow_any_expr = false
disallow_untyped_calls = false
warn_unused_ignores = false
strict = false
